# neonape

./: .cline.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  SECURITY.md  exploit_development.py  install.sh  install_recon_tools.sh  linpeas_output.txt  packet_sniffer.py  port_scanner.py  pyproject.toml  requirements.txt  ssh_bruteforce.py  stoic_ee_security_triage_summary.md  uninstall.sh  update.sh  web_scraper.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.neon_ape/scans/: 127.0.0.1_host_discovery.xml
docs/: architecture.md  schema.md
docs/obsidian/: Attack-Chain.canvas  Target.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.9.3.md  v0.9.4.md  v0.9.5.md  v0.9.6.md
neon_ape/: __init__.py  __main__.py  app.py  cli.py  config.py  models.py  obsidian_sync.py
neon_ape/agents/: __init__.py  adam.py  autoresearch.py  magi.py
neon_ape/checklists/: neon_ape_checklist.json  oscp_black_book_mvp.json
neon_ape/commands/: __init__.py  config.py  db.py  interactive.py  (+7 more)
tests/: __init__.py  test_adam.py  test_autoresearch.py  test_cli.py  test_config.py  test_harness.py  test_interactive.py  test_knowledge_graph.py  test_llm_triage.py  test_magi.py  test_notes.py  test_nuclei_helper.py  test_obsidian_sync.py  test_orchestrator.py  test_parsers.py  test_passive_recon.py  test_pdf_generator.py  test_repository.py  test_skill_manager.py  test_tools.py  test_uninstall.py  test_update.py  test_validation.py  test_views.py
(+32 files in other folders)
